# semantic-search-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  download-deps.sh  pixi.toml
.github/workflows/: discord-search-bot-docker.yaml  discord-search-bot-ui-docker.yaml  docker-build-and-publish.yaml  embedding-api-docker.yaml
discord-bot/: .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json
discord-bot/src/: embed.ts  main.ts  qdrant.ts
discord-bot/ui/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  ui-docker-entrypoint.sh
discord-bot/ui/public/: config.json
discord-bot/ui/src/: App.svelte  app.css
example/: conversations.ts  download-conversations.sh  embed.ts  indexConversations.ts  qdrant.ts  search.ts
examples/: index-conversations.rs
src/: lib.rs  main.rs
