[package]
name = "semantic-search-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
fastembed = { version = "5.0.0", default-features = false }
itertools = "0.14.0"
poem = "3.1.11"
qdrant-client = "1.15.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = "1.46.1"
uuid = { version = "1.17.0", features = ["serde", "v5"] }
