[package]
name = "embedding-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bm25 = { version = "2.3.0", features = ["language_detection"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
fastembed = { version = "5.0.0", default-features = false }
itertools = "0.14.0"
poem = "3.1.11"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "fs"] }
